<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
		android:id="@+id/menu_refresh"
		android:title="Update"
		android:icon="@drawable/ic_menu_refresh"
		android:orderInCategory="0"
		android:showAsAction="ifRoom" />
	<item
		android:id="@+id/menu_search"
		android:title="Search"
		android:icon="@android:drawable/ic_menu_search"
		android:orderInCategory="1"
		android:showAsAction="ifRoom" />
	<item
		android:id="@+id/menu_supervisor"
		android:title="Supervisor"
		android:icon="@android:drawable/ic_media_play"
		android:orderInCategory="2"
		android:showAsAction="ifRoom" />
	<item
		android:id="@+id/menu_control"
		android:title="@string/menu_control"
		android:icon="@android:drawable/ic_menu_preferences"
		android:orderInCategory="3"
		android:showAsAction="ifRoom" />
	<item
		android:id="@+id/menu_clean"
		android:title="@string/menu_clean"
		android:icon="@android:drawable/ic_menu_delete"
		android:orderInCategory="4"
		android:showAsAction="never" />
	<item
		android:id="@+id/menu_run"
		android:title="@string/menu_run"
		android:icon="@android:drawable/ic_menu_agenda"
		android:orderInCategory="5"
		android:showAsAction="never" />
</menu>