<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:gravity="center_vertical">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">
		<ToggleButton
			android:id="@+id/togglerefresh"
			android:layout_width="80dip"
			android:layout_height="wrap_content"
			android:textOn="Updating"
			android:textOff="@string/button_supervisor_update_off" />
		<ToggleButton
			android:id="@+id/toggleboot"
			android:layout_width="64dip"
			android:layout_height="wrap_content"
			android:textOn="@string/button_supervisor_boot_on"
			android:textOff="@string/button_supervisor_boot_off" />
	</LinearLayout>
	<TextView
		android:id="@+id/textiplist"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textStyle="bold" />
	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<fragment
			android:id="@+id/servicelist"
			android:name="com.botbrew.basil.ServiceListFragment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</FrameLayout>
</LinearLayout>